--- a/ChatGPT-20230324/Project/index_goal.html
+++ b/ChatGPT-20230324/Project/index_goal.html
@@ -18,7 +18,7 @@
           {role: "system", content: "あなたA-Frameバージョン1.3.0以降のPrimitive Elementのタグを教えるアシスタントです。"}
         ];
       }
-      //ボタンが押されたら
+      //ボタンを押した時の挙動
       async function OnClick() {
         outputText.value="Waiting...";
         //プロンプトをTexAreaから取得
@@ -99,9 +99,11 @@
     </script>
   </head>
   <body>
+    <!-- A-Frameのシーン -->
     <a-scene>
       <a-entity id="container"></a-entity>
     </a-scene>
+    <!-- テキストエリアとボタン -->
     <div style="position: fixed; top: 20px; left: 20px; width: 35%;">
       <textarea id="input" style="font-size: 16px; width: 100%; height: 80px;"></textarea>
       <button onclick="OnClick()" style="display: block; margin: 10px 0; width: 100%; height: 50px;">Submit</button>
