Update sample 1 and 2

--- a/ChatGPT-20230324/Project/Sample/lesson02.html
+++ b/ChatGPT-20230324/Project/Sample/lesson02.html
@@ -60,7 +60,8 @@
       }
       //ChatGPTからの回答からA-Frameの要素を抽出
       function CreateElements(text){
-
+        //textからA-Frameの要素を抽出
+        let generatedElements = FindAframeElements(text);
       }
     </script>
   </head>
