--- a/ChatGPT-20230324/Project/Sample/lesson01.html
+++ b/ChatGPT-20230324/Project/Sample/lesson01.html
@@ -52,7 +52,8 @@
       }
       //ChatGPTからの回答からA-Frameの要素を抽出
       function CreateElements(text){
-
+        //textからA-Frameの要素を抽出
+        let generatedElements = FindAframeElements(text);
       }
     </script>
   </head>
