--- a/ChatGPT-20230324/Project/Sample/lesson04.html
+++ b/ChatGPT-20230324/Project/Sample/lesson04.html
@@ -22,10 +22,18 @@
       //ボタンを押した時の挙動
       async function OnClick() {
         outputText.value="Waiting...";
+        /**Lesson04追加-開始**/
+        //プロンプトをTexAreaから取得
+        let prompt = document.getElementById('input').value;
+        //promptがない場合
+        if (!prompt){outputText.value="プロンプトを入力してください"; return};
+        //プロンプトをmessageArrayに追加
+        messageArray[1]={role: "user", content: prompt};
+        /**Lesson04追加-終了**/
         //ChatGPTにメッセージを送信
         let result = await SendMessage();
         //ChatGPTからの回答からA-Frameの要素を抽出
-        CreateElements(result);
+        CreateElements(result);     
       }
       //ChatGPTにメッセージを送信
       async function SendMessage() {
