--- a/ChatGPT-20230324/Project/Sample/lesson05.html
+++ b/ChatGPT-20230324/Project/Sample/lesson05.html
@@ -22,18 +22,16 @@
       //ボタンを押した時の挙動
       async function OnClick() {
         outputText.value="Waiting...";
-        /**Lesson04追加-開始**/
         //プロンプトをTexAreaから取得
         let prompt = document.getElementById('input').value;
         //promptがない場合
         if (!prompt){outputText.value="プロンプトを入力してください"; return};
         //プロンプトをmessageArrayに追加
         messageArray[1]={role: "user", content: prompt};
-        /**Lesson04追加-終了**/
         //ChatGPTにメッセージを送信
         let result = await SendMessage();
         //ChatGPTからの回答からA-Frameの要素を抽出
-        CreateElements(result);     
+        CreateElements(result);  
       }
       //ChatGPTにメッセージを送信
       async function SendMessage() {
@@ -70,6 +68,18 @@
       function CreateElements(text){
         //textからA-Frameの要素を抽出
         let generatedElements = FindAframeElements(text);
+        /**Lesson05追加-開始**/
+        //generatedElementsが空でなければcontainerに各要素を追加
+        if(generatedElements.length>0){
+          //containerに各要素を追加
+          generatedElements.forEach(element => {
+            //elementをcontainerに追加
+            elmContainer.appendChild(element); 
+          });
+        }else{
+          outputText.value += "[処理結果]\nNo A-Frame primitive element found.\n";
+        } 
+        /**Lesson05追加-終了**/
       }
     </script>
   </head>
