--- a/ChatGPT-20230324/Project/Sample/lesson07.html
+++ b/ChatGPT-20230324/Project/Sample/lesson07.html
@@ -26,6 +26,10 @@
         let prompt = document.getElementById('input').value;
         //promptがない場合
         if (!prompt){outputText.value="プロンプトを入力してください"; return};
+        /**Lesson07追加-開始**/
+        //細かい注文を追加
+        prompt= prompt+ "\n 上記を実現する<a-scene> </a-scene>内の要素を生成。ただしa-camera,a-assets,a-animationは使用しない。結果はコードブロックに記述。";
+        /**Lesson07追加-終了**/
         //プロンプトをmessageArrayに追加
         messageArray[1]={role: "user", content: prompt};
         //ChatGPTにメッセージを送信
@@ -70,12 +74,10 @@
         let generatedElements = FindAframeElements(text);
         //generatedElementsが空でなければcontainerに各要素を追加
         if(generatedElements.length>0){
-          /**Lesson06追加-開始**/
            //containerから子要素を削除
            while (elmContainer.firstChild) {
             elmContainer.removeChild(elmContainer.firstChild);
           }
-          /**Lesson06追加-終了**/
           //containerに各要素を追加
           generatedElements.forEach(element => {
             //elementをcontainerに追加
