--- a/ChatGPT-20230324/Project/Sample/lesson08.html
+++ b/ChatGPT-20230324/Project/Sample/lesson08.html
@@ -13,11 +13,12 @@
         elmContainer = document.getElementById('container');
         //ChatGPTからの回答を表示するテキストエリア
         outputText=document.getElementById('output');
+        /**Lesson08変更-開始**/
         //ChatGPTに送信するメッセージ。system:システムの役割、user:指示
         messageArray=[
-          {role: "system", content: "あなたA-Frameバージョン1.3.0以降のPrimitive Elementのタグを教えるアシスタントです。"},
-          {role: "user", content: "x=0, y=1.5, z=-3の位置に、色が赤、半径が0.5の球を作って。"},
+          {role: "system", content: "あなたA-Frameバージョン1.3.0以降のPrimitive Elementのタグを教えるアシスタントです。"}
         ];
+        /**Lesson08変更-終了**/
       }
       //ボタンを押した時の挙動
       async function OnClick() {
@@ -26,12 +27,12 @@
         let prompt = document.getElementById('input').value;
         //promptがない場合
         if (!prompt){outputText.value="プロンプトを入力してください"; return};
-        /**Lesson07追加-開始**/
         //細かい注文を追加
         prompt= prompt+ "\n 上記を実現する<a-scene> </a-scene>内の要素を生成。ただしa-camera,a-assets,a-animationは使用しない。結果はコードブロックに記述。";
-        /**Lesson07追加-終了**/
+        /**Lesson08変更-開始**/
         //プロンプトをmessageArrayに追加
-        messageArray[1]={role: "user", content: prompt};
+        messageArray.push({role: "user", content: prompt});
+        /**Lesson08変更-終了**/
         //ChatGPTにメッセージを送信
         let result = await SendMessage();
         //ChatGPTからの回答からA-Frameの要素を抽出
@@ -78,6 +79,7 @@
            while (elmContainer.firstChild) {
             elmContainer.removeChild(elmContainer.firstChild);
           }
+
           //containerに各要素を追加
           generatedElements.forEach(element => {
             //elementをcontainerに追加
