--- a/ChatGPT-20230324/Project/Sample/lesson07.html
+++ b/ChatGPT-20230324/Project/Sample/lesson07.html
@@ -15,7 +15,7 @@
         outputText=document.getElementById('output');
         //ChatGPTに送信するメッセージ。system:システムの役割、user:指示
         messageArray=[
-          {role: "system", content: "あなたA-Frameバージョン1.3.0以降のPrimitive Elementのタグを教えるアシスタントです。"},
+          {role: "system", content: "あなたA-Frameバージョン1.4.0以降のPrimitive Elementのタグを教えるアシスタントです。"},
           {role: "user", content: "x=0, y=1.5, z=-3の位置に、色が赤、半径が0.5の球を作って。"},
         ];
       }
@@ -28,7 +28,7 @@
         if (!prompt){outputText.value="プロンプトを入力してください"; return};
         /**Lesson07追加-開始**/
         //細かい注文を追加
-        prompt= prompt+ "\n 上記を実現する<a-scene> </a-scene>内の要素を生成。ただしa-camera,a-assets,a-animationは使用しない。結果はコードブロックに記述。";
+        prompt= prompt+ "\n 上記を実現するA-Frameのa-から始まる要素を生成。ただしa-camera,a-assets,a-animationは使用しない。結果はコードブロックに記述。";
         /**Lesson07追加-終了**/
         //プロンプトをmessageArrayに追加
         messageArray[1]={role: "user", content: prompt};
