--- a/ChatGPT-20230324/Project/Sample/lesson08.html
+++ b/ChatGPT-20230324/Project/Sample/lesson08.html
@@ -16,7 +16,7 @@
         /**Lesson08変更-開始**/
         //ChatGPTに送信するメッセージ。system:システムの役割、user:指示
         messageArray=[
-          {role: "system", content: "あなたA-Frameバージョン1.3.0以降のPrimitive Elementのタグを教えるアシスタントです。"}
+          {role: "system", content: "あなたA-Frameバージョン1.4.0以降のPrimitive Elementのタグを教えるアシスタントです。"}
         ];
         /**Lesson08変更-終了**/
       }
@@ -28,9 +28,10 @@
         //promptがない場合
         if (!prompt){outputText.value="プロンプトを入力してください"; return};
         //細かい注文を追加
-        prompt= prompt+ "\n 上記を実現する<a-scene> </a-scene>内の要素を生成。ただしa-camera,a-assets,a-animationは使用しない。結果はコードブロックに記述。";
+        prompt= prompt+ "\n 上記を実現するA-Frameのa-から始まる要素を生成。ただしa-camera,a-assets,a-animationは使用しない。結果はコードブロックに記述。";
         /**Lesson08変更-開始**/
         //プロンプトをmessageArrayに追加
+        //messageArray[1]={role: "user", content: prompt};
         messageArray.push({role: "user", content: prompt});
         /**Lesson08変更-終了**/
         //ChatGPTにメッセージを送信
