--- a/ChatGPT-20230324/Project/Sample/lesson09.html
+++ b/ChatGPT-20230324/Project/Sample/lesson09.html
@@ -15,7 +15,7 @@
         outputText=document.getElementById('output');
         //ChatGPTに送信するメッセージ。system:システムの役割、user:指示
         messageArray=[
-          {role: "system", content: "あなたA-Frameバージョン1.3.0以降のPrimitive Elementのタグを教えるアシスタントです。"}
+          {role: "system", content: "あなたA-Frameバージョン1.4.0以降のPrimitive Elementのタグを教えるアシスタントです。"}
         ];
       }
       //ボタンを押した時の挙動
@@ -26,7 +26,7 @@
         //promptがない場合
         if (!prompt){outputText.value="プロンプトを入力してください"; return};
         //細かい注文を追加
-        prompt= prompt+ "\n 上記を実現する<a-scene> </a-scene>内の要素を生成。ただしa-camera,a-assets,a-animationは使用しない。結果はコードブロックに記述。";
+        prompt= prompt+ "\n 上記を実現するA-Frameのa-から始まる要素を生成。ただしa-camera,a-assets,a-animationは使用しない。結果はコードブロックに記述。";
         //プロンプトをmessageArrayに追加
         messageArray.push({role: "user", content: prompt});
         //ChatGPTにメッセージを送信
