--- a/ChatGPT-20230324/Project/Sample/lesson05.html
+++ b/ChatGPT-20230324/Project/Sample/lesson05.html
@@ -7,7 +7,7 @@
       let elmContainer; //A-Frameのオブジェクトの追加先
       let outputText;  //ChatGPTからの回答を表示するテキストエリア
       let messageArray; //ChatGPTとのやりとりを記録する配列。
-     
+      //初期化 
       window.onload=function(){
         //A-Frameのオブジェクトの追加先
         elmContainer = document.getElementById('container');
