--- a/ChatGPT-20230324/Project/Sample/lesson07.html
+++ b/ChatGPT-20230324/Project/Sample/lesson07.html
@@ -28,7 +28,7 @@
         if (!prompt){outputText.value="プロンプトを入力してください"; return;};
         /**Lesson07追加-開始**/
         //細かい注文を追加
-        prompt= prompt+ "\n 上記を実現するA-Frameのa-から始まる要素を生成。ただしa-camera,a-assets,a-animationは使用しない。結果はコードブロックに記述。";
+        prompt= prompt+ "\n 上記を実現するA-Frameのa-から始まる要素を生成。\nただしa-camera,a-assets,a-animationは使用しない。\n結果はコードブロックに記述。";
         /**Lesson07追加-終了**/
         //プロンプトをmessageArrayに追加
         messageArray[1]={role: "user", content: prompt};
