--- a/ChatGPT-20230324/Project/Sample/lesson09.html
+++ b/ChatGPT-20230324/Project/Sample/lesson09.html
@@ -69,7 +69,7 @@
         }else{
           text="No Response";
           /**Lesson09追加-開始**/
-          //ChatGPTからの回答がなければ、最後の要素を削除
+          //ChatGPTからの回答がなければ、最後の質問を削除
           messageArray.pop();
           /**Lesson09追加-終了**/ 
         }
