--- a/ChatGPT-20230324/Project/Sample/lesson09.html
+++ b/ChatGPT-20230324/Project/Sample/lesson09.html
@@ -61,7 +61,7 @@
           /**Lesson09追加-開始**/
           //ChatGPTからの回答をmessagesArrayに追加
           messageArray.push({role: "assistant", content: text});
-          //messagesArrayの要素数が9を超えたら、1番目と2番目の要素(0スタート)を削除
+          //messagesArrayの要素数が9を超えたら、1番目から2つのメッセージを削除
           if(messageArray.length>9){ 
             messageArray.splice(1,2);
           }
