--- a/ChatGPT-20230324/Project/Sample/08.html
+++ b/ChatGPT-20230324/Project/Sample/08.html
@@ -28,7 +28,7 @@
         //promptがない場合
         if (!prompt){outputText.value="プロンプトを入力してください"; return;}
         //細かい注文を追加
-        prompt= prompt+ "\n 上記を実現するA-Frameのa-から始まる要素を生成。\nただしa-camera,a-assets,a-animationは使用しない。\n結果はコードブロックに記述。";
+        prompt= prompt+ "\n 上記を実現するA-Frameのa-から始まる要素を生成。\nただしa-camera,a-assets,a-animation,scriptは使用しない。\n結果はコードブロックに記述。";
         /**Lesson08変更-開始**/
         //プロンプトをmessageArrayに追加
         //messageArray[1]={role: "user", content: prompt};
