--- a/ChatGPT-20230324/Project/Sample/09.html
+++ b/ChatGPT-20230324/Project/Sample/09.html
@@ -26,7 +26,7 @@
         //promptがない場合
         if (!prompt){outputText.value="プロンプトを入力してください"; return;}
         //細かい注文を追加
-        prompt= prompt+ "\n 上記を実現するA-Frameのa-から始まる要素を生成。\nただしa-camera,a-assets,a-animationは使用しない。\n結果はコードブロックに記述。";
+        prompt= prompt+ "\n 上記を実現するA-Frameのa-から始まる要素を生成。\nただしa-camera,a-assets,a-animation,scriptは使用しない。\n結果はコードブロックに記述。";
         //プロンプトをmessageArrayに追加
         messageArray.push({role: "user", content: prompt});
         //ChatGPTにメッセージを送信
