--- a/ChatGPT-20230324/Project/index.html
+++ b/ChatGPT-20230324/Project/index.html
@@ -4,51 +4,37 @@
     <script src="ElementsExtractor.js"></script>
     <script type="text/javascript">
       let API_KEY = '';
-      let elmContainer;
-      let outputText;
-      let messageArray;
-     
+      let elmContainer; //A-Frameのオブジェクトの追加先
+      let outputText;  //ChatGPTからの回答を表示するテキストエリア
+      let messageArray; //ChatGPTとのやりとりを記録する配列。
+      //初期化
       window.onload=function(){
-        //Element to add A-Frame object
+        //A-Frameのオブジェクトの追加先
         elmContainer = document.getElementById('container');
-        //Text area to display the answer from ChatGPT
+        //ChatGPTからの回答を表示するテキストエリア
         outputText=document.getElementById('output');
-        //Initialize messageArray to be sent to ChatGPT
+        //ChatGPTに送信するメッセージ。system:システムの役割、user:指示
         messageArray=[
             {role: "system", content: "あなたA-Frameバージョン1.4.0以降のPrimitive Elementのタグを教えるアシスタントです。"},
-            {role: "user", content: "OnClick()でここに命令が代入されます"}
+            {role: "user", content: "x=0, y=1.5, z=-3の位置に、色が赤、半径が0.5の球を作って。"}
         ];   
       }
-      //Called when the button is clicked
+      //ボタンを押した時の挙動
       async function OnClick() {
-        //Initialize the text area to display the answer from ChatGPT
-        outputText.value="Waiting for response...";
-        //Get prompt from TextArea
-        let prompt = document.getElementById('input').value;
-        //Return if prompt is empty.
-        if (!prompt){outputText.value="Enter a prompt"; return};
-        //Add options to prompt
-        prompt+=
-          `上記を実現するA-Frameのa-から始まる要素を生成。ただし下記の条件を満たすこと。
-          - a-camera,a-assets,a-animation,a-lightは使用しない。
-          - scriptを使用しない。
-          - 背景の設定にbackgroundコンポーネントではなくa-sky>を使用。
-          - 結果はコードブロックに記述。`;        
-        //Add prompt to messageArray to be sent to ChatGPT
-        messageArray[1]={role: "user", content: prompt};
-        //Send message to ChatGPT and get the answer.
+        //ChatGPTからの回答を表示するテキストエリアを初期化
+        outputText.value="Waiting for response...";  
+        //ChatGPTにメッセージを送信して、回答を取得
         let result = await SendMessage();
-        //Display the answer from ChatGPT
+        //ChatGPTからの回答をテキストエリアに表示
         outputText.value=("[Response]\n"+result+"\n\n");
-        //Extract A-Frame elements from the answer from ChatGPT and add them to the scene
+        //ChatGPTからの回答からA-Frameのオブジェクトを抽出して、シーンに追加
         result = CreateElements(result); 
-        //Display the extracted elements as text
+        //ChatGPTからの回答から抽出したA-Frameのオブジェクトをテキストエリアに表示
         outputText.value+=("[Extracted Elements]\n"+result);
       }
-
-      //ChatGPTにメッセージを送信
+      //ChatGPTにメッセージを送信して、回答を取得
       async function SendMessage() {
-        //Send message to ChatGPT
+        //ChatGPTにメッセージを送信
         let response = await fetch('https://api.openai.com/v1/chat/completions', 
           {
             method: 'POST',
@@ -64,47 +50,28 @@
             ),
           }
         );
-      //Get the result as json from response
+      //ChatGPTからの回答をjson形式で取得
       let data = await response.json();
-      //Variable to store the answer from ChatGPT
-      let result;
-      //Set answer from ChatGPT to result.
-      if(data.choices){
-        //Get the answer from ChatGPT as text and store it in result
-        result=data.choices[0].message.content;
-      }else{
-        //Delete the last element of messageArray if ChatGPT does not respond.
-        result="No Response";
-      }
+      //ChatGPTからの回答を格納する変数
+      let result=JSON.stringify(data);
       return result;
     }
-    //Extract A-Frame elements from the answer from ChatGPT and add them to the scene
+    //ChatGPTからの回答からA-Frameのオブジェクトを抽出して、シーンに追加
     function CreateElements(text){  
-      //Extract A-Frame elements from text (text is the answer from ChatGPT)
+      //ChatGPTからの回答からA-Frameのオブジェクトを抽出(引数textはChatGPTからの回答)
       let generatedElements = FindAframeElements(text);
-      //Add each element's tag to result as string (result is the text to be displayed in the text area)
+      //A-Frameのオブジェクトのタグを文字列化してresultに追加(TextAreaでの表示用)
       let result=generatedElements.map(element => element.outerHTML).join("\n");
-      //Add each element to container if generatedElements is not empty.
-      if(generatedElements.length>0){
-        //Remove all child elements from container
-        while (elmContainer.firstChild) {
-          elmContainer.removeChild(elmContainer.firstChild);
-        }
-        //Add each new element to container
-        generatedElements.forEach(element => {
-          elmContainer.appendChild(element); 
-        });
-      }else{
-        result = "No A-Frame primitive element found.\n";
-      }
       return result;
     }
     </script>
   </head>
   <body>
+    <!-- A-Frameのシーン -->
     <a-scene>
       <a-entity id="container"></a-entity>
     </a-scene>
+    <!-- テキストエリアとボタン -->
     <div style="position: fixed; top: 20px; left: 20px; width: 35%;">
       <textarea id="input" style="display: block; font-size: 18px; width: 100%; height: 80px;">Enter a prompt</textarea>
       <button onclick="OnClick()" style="display: block; margin: 10px 0; width: 100%; height: 50px;">Submit</button>
