--- a/ChatGPT-20230324/Project/Sample/01.html
+++ b/ChatGPT-20230324/Project/Sample/01.html
@@ -71,7 +71,7 @@
     </a-scene>
     <!-- テキストエリアとボタン -->
     <div style="position: fixed; top: 20px; left: 20px; width: 35%;">
-      <textarea id="input" style="display: block; font-size: 18px; width: 100%; height: 80px;">Enter a prompt</textarea>
+      <textarea id="input" style="display: block; font-size: 18px; width: 100%; height: 80px;"></textarea>
       <button onclick="OnClick()" style="display: block; margin: 10px 0; width: 100%; height: 50px;">Submit</button>
       <textarea id="output" style="display: block; font-size: 18px; width: 100%; height: 250px;"></textarea>
     </div>
