--- a/ChatGPT-20230324/Project/Sample/04.html
+++ b/ChatGPT-20230324/Project/Sample/04.html
@@ -23,20 +23,22 @@
       async function OnClick() {
         //ChatGPTからの回答を表示するテキストエリアを初期化
         outputText.value="Waiting for response...";  
-        /***Lesson03: 追加開始***/
         //テキストエリアからプロンプトを取得
         let prompt = document.getElementById('input').value;
         //プロンプトが空の場合、処理を終了
         if (!prompt){outputText.value="プロンプトを入力してください"; return};
         //ChatGPTに送信するメッセージにプロンプトをセット
         messageArray[1]={role: "user", content: prompt};
-        /***Lesson03: 追加終了***/
         //ChatGPTにメッセージを送信して、回答を取得
         let result = await SendMessage();
         //ChatGPTからの回答をテキストエリアに表示
         outputText.value=("[ChatGPTの回答]\n"+result+"\n\n");
         //ChatGPTからの回答からA-Frameのオブジェクトを抽出して、シーンに追加
         result = CreateElements(result); 
+        /*** Lesson4:追加開始 ***/
+        //ChatGPTからの回答から抽出したA-Frameのオブジェクトをテキストエリアに表示
+        outputText.value+=("[抽出された要素]\n"+result);
+        /*** Lesson4:追加終了 ***/
       }
       //ChatGPTにメッセージを送信して、回答を取得
       async function SendMessage() {
