--- a/ChatGPT-20230324/Project/Sample/05.html
+++ b/ChatGPT-20230324/Project/Sample/05.html
@@ -7,7 +7,7 @@
       let elmContainer; //A-Frameのオブジェクトの追加先
       let outputText;  //ChatGPTからの回答を表示するテキストエリア
       let messageArray; //ChatGPTとのやりとりを記録する配列。
-      //初期化 
+      //初期化
       window.onload=function(){
         //A-Frameのオブジェクトの追加先
         elmContainer = document.getElementById('container');
@@ -15,72 +15,71 @@
         outputText=document.getElementById('output');
         //ChatGPTに送信するメッセージ。system:システムの役割、user:指示
         messageArray=[
-          {role: "system", content: "あなたA-Frameバージョン1.4.0以降のPrimitive Elementのタグを教えるアシスタントです。"},
-          {role: "user", content: "x=0, y=1.5, z=-3の位置に、色が赤、半径が0.5の球を作って。"},
-        ];
+            {role: "system", content: "あなたA-Frameバージョン1.4.0以降のPrimitive Elementのタグを教えるアシスタントです。"},
+            {role: "user", content: "x=0, y=1.5, z=-3の位置に、色が赤、半径が0.5の球を作って。"}
+        ];   
       }
       //ボタンを押した時の挙動
       async function OnClick() {
-        outputText.value="Waiting...";
-        //プロンプトをTexAreaから取得
+        //ChatGPTからの回答を表示するテキストエリアを初期化
+        outputText.value="Waiting for response...";  
+        //テキストエリアからプロンプトを取得
         let prompt = document.getElementById('input').value;
-        //promptがない場合
-        if (!prompt){outputText.value="プロンプトを入力してください"; return;}
-        //プロンプトをmessageArrayに追加
+        //プロンプトが空の場合、処理を終了
+        if (!prompt){outputText.value="プロンプトを入力してください"; return};
+        //ChatGPTに送信するメッセージにプロンプトをセット
         messageArray[1]={role: "user", content: prompt};
-        //ChatGPTにメッセージを送信
+        //ChatGPTにメッセージを送信して、回答を取得
         let result = await SendMessage();
-        //ChatGPTからの回答からA-Frameの要素を抽出
-        CreateElements(result);  
+        //ChatGPTからの回答をテキストエリアに表示
+        outputText.value=("[ChatGPTの回答]\n"+result+"\n\n");
+        //ChatGPTからの回答からA-Frameのオブジェクトを抽出して、シーンに追加
+        result = CreateElements(result); 
+        /*** Lesson4:追加開始 ***/
+        //ChatGPTからの回答から抽出したA-Frameのオブジェクトをテキストエリアに表示
+        outputText.value+=("[抽出された要素]\n"+result);
+        /*** Lesson4:追加終了 ***/
       }
-      //ChatGPTにメッセージを送信
+      //ChatGPTにメッセージを送信して、回答を取得
       async function SendMessage() {
-        //リクエストを送信
+        //ChatGPTにメッセージを送信
         let response = await fetch('https://api.openai.com/v1/chat/completions', 
-        {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-            Authorization: `Bearer ${API_KEY}`,
-          },
-          body: JSON.stringify({
-            model: "gpt-3.5-turbo",
-            messages: messageArray, 
-            temperature:0.3,
-          }),
-        });
-        //レスポンスを受け取ったら、結果をjsonで取得
-        let data = await response.json();
-        //結果をテキストとして覚える変数
-        let text="このあとこの変数に結果を格納します。";
-        //ChatGPTからの回答があればメッセージ履歴に追加
-        if(data.choices){
-          //ChatGPTからの回答をテキストで取得
-          text=data.choices[0].message.content;
-        }else{
-          text="No Response";
-        }
-        //結果を表示
-        outputText.value=(text+"\n\n");
-        return text;
+          {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json',
+              Authorization: `Bearer ${API_KEY}`,
+            },
+            body: JSON.stringify({
+              model: "gpt-3.5-turbo",
+              messages: messageArray, 
+              temperature:0.3,
+              }
+            ),
+          }
+        );
+      //ChatGPTからの回答をjson形式で取得
+      let data = await response.json();
+      //ChatGPTからの回答を格納する変数
+      let result=JSON.stringify(data);
+      //ChatGPTからレスポンスがあったかどうかを判定
+      if(data.choices){
+        //ChatGPTからの回答をテキスト形式で取得してresultに格納
+        result=data.choices[0].message.content;
+      }else{
+        //ChatGPTからレスポンスがなかった場合、No Responseと返す。
+        result="No Response";
       }
-      //ChatGPTからの回答からA-Frameの要素を抽出
-      function CreateElements(text){
-        //textからA-Frameの要素を抽出
-        let generatedElements = FindAframeElements(text);
-        /**Lesson05追加-開始**/
-        //generatedElementsが空でなければcontainerに各要素を追加
-        if(generatedElements.length>0){
-          //containerに各要素を追加
-          generatedElements.forEach(element => {
-            //elementをcontainerに追加
-            elmContainer.appendChild(element); 
-          });
-        }else{
-          outputText.value += "[処理結果]\nNo A-Frame primitive element found.\n";
-        } 
-        /**Lesson05追加-終了**/
-      }
+      return result;
+    }
+    //ChatGPTからの回答からA-Frameのオブジェクトを抽出して、シーンに追加
+    function CreateElements(text){  
+      //ChatGPTからの回答からA-Frameのオブジェクトを抽出(引数textはChatGPTからの回答)
+      let generatedElements = FindAframeElements(text);
+      //A-Frameのオブジェクトのタグを文字列化してresultに追加(TextAreaでの表示用)
+      let result=generatedElements.map(element => element.outerHTML).join("\n");
+      return result;
+    }
     </script>
   </head>
   <body>
@@ -90,9 +89,9 @@
     </a-scene>
     <!-- テキストエリアとボタン -->
     <div style="position: fixed; top: 20px; left: 20px; width: 35%;">
-      <textarea id="input" style="font-size: 16px; width: 100%; height: 80px;"></textarea>
+      <textarea id="input" style="display: block; font-size: 18px; width: 100%; height: 80px;"></textarea>
       <button onclick="OnClick()" style="display: block; margin: 10px 0; width: 100%; height: 50px;">Submit</button>
-      <textarea id="output" style="font-size: 16px; width: 100%; height: 250px;"></textarea>
+      <textarea id="output" style="display: block; font-size: 18px; width: 100%; height: 250px;"></textarea>
     </div>
   </body>
 </html>
