--- a/ChatGPT-20230324/Project/Sample/07.html
+++ b/ChatGPT-20230324/Project/Sample/07.html
@@ -27,6 +27,15 @@
         let prompt = document.getElementById('input').value;
         //プロンプトが空の場合、処理を終了
         if (!prompt){outputText.value="プロンプトを入力してください"; return};
+        /***Lesson7:追加開始***/
+        //プロンプトにオプションを追加
+        prompt+=
+          `上記を実現するA-Frameのa-から始まる要素を生成。ただし下記の条件を満たすこと。
+          - a-camera,a-assets,a-animation,a-lightは使用しない。
+          - scriptを使用しない。
+          - 背景の設定にbackgroundコンポーネントではなくa-sky>を使用。
+          - 結果はコードブロックに記述。`; 
+        /***Lesson7:追加終了***/
         //ChatGPTに送信するメッセージにプロンプトをセット
         messageArray[1]={role: "user", content: prompt};
         //ChatGPTにメッセージを送信して、回答を取得
@@ -78,12 +87,10 @@
       let result=generatedElements.map(element => element.outerHTML).join("\n");
       //A-Frameのオブジェクトがある場合はオブジェクトをシーンに追加
       if(generatedElements.length>0){
-        /***Lesson6:追加開始***/
         //シーンからすべてのオブジェクトを削除
         while (elmContainer.firstChild) {
           elmContainer.removeChild(elmContainer.firstChild);
         }
-        /***Lesson6:追加終了***/
         //A-Frameのオブジェクトを1つずつシーンに追加
         generatedElements.forEach(element => {
           elmContainer.appendChild(element); 
