--- a/ChatGPT-20230324/Project/Sample/10.html
+++ b/ChatGPT-20230324/Project/Sample/10.html
@@ -47,6 +47,10 @@
         result = CreateElements(result); 
         //ChatGPTからの回答から抽出したA-Frameのオブジェクトをテキストエリアに表示
         outputText.value+=("[抽出された要素]\n"+result);
+        /***Lesson10:追加開始***/
+        //ChatGPTからの回答をA-Frameのシーンに関連するものだけに上書き
+        messageArray[messageArray.length-1]={role: "assistant", content: "```html\n<a-scene>\n "+elmContainer.innerHTML+"\n </a-scene>\n``` "};   
+        /***Lesson10:追加終了***/
       }
       //ChatGPTにメッセージを送信して、回答を取得
       async function SendMessage() {
@@ -74,21 +78,17 @@
       if(data.choices){
         //ChatGPTからの回答をテキスト形式で取得してresultに格納
         result=data.choices[0].message.content;
-        /***Lesson9:追加開始***/
         //ChatGPTからの回答をmessageArrayに追加
         messageArray.push({role: "assistant", content: result});
         //messageArrayが9個を超えた場合、最初の2つの要素を削除
         if(messageArray.length>9){ 
           messageArray.splice(1,2);
         }
-        /***Lesson9:追加終了***/
       }else{
         //ChatGPTからレスポンスがなかった場合、No Responseと返す。
         result="No Response";
-        /***Lesson9:追加開始***/
         //ChatGPTからレスポンスがなかった場合、messageArrayの最後の質問を削除
         messageArray.pop();
-        /***Lesson9:追加終了***/
       }
       return result;
     }
