--- a/ChatGPT-20230324/Project/Sample/05.html
+++ b/ChatGPT-20230324/Project/Sample/05.html
@@ -84,7 +84,8 @@
           generatedElements.forEach(element => {
             elmContainer.appendChild(element); 
           });
-        }else{
+        }
+        else{
           result = "No A-Frame primitive element found.\n";
         }
         /***Lesson5: 追加終了***/
