--- a/ChatGPT-20230324/Project/Sample/09.html
+++ b/ChatGPT-20230324/Project/Sample/09.html
@@ -81,7 +81,8 @@
             messageArray.splice(1,2);
           }
           /***Lesson9:追加終了***/
-        }else{
+        }
+        else{
           //ChatGPTからレスポンスがなかった場合、No Responseと返す。
           result="No Response";
           /***Lesson9:追加開始***/
