--- a/ChatGPT-20230324/Project/Sample/10.html
+++ b/ChatGPT-20230324/Project/Sample/10.html
@@ -83,7 +83,8 @@
           if(messageArray.length>9){ 
             messageArray.splice(1,2);
           }
-        }else{
+        }
+        else{
           //ChatGPTからレスポンスがなかった場合、No Responseと返す。
           result="No Response";
           //ChatGPTからレスポンスがなかった場合、messageArrayの最後の質問を削除
