--- a/ChatGPT-20230324/Project/Sample/03.html
+++ b/ChatGPT-20230324/Project/Sample/03.html
@@ -4,7 +4,7 @@
     <script src="https://aframe.io/releases/1.4.0/aframe.min.js"></script>
     <script src="ElementsExtractor.js"></script>
     <script type="text/javascript">
-      let API_KEY = '';
+      let API_KEY = '自分のAPI Key';
       let elmContainer; //A-Frameのオブジェクトの追加先
       let outputText;  //ChatGPTからの回答を表示するテキストエリア
       let messageArray; //ChatGPTとのやりとりを記録する配列。
