--- a/ChatGPT-20230324/Project/Sample/06.html
+++ b/ChatGPT-20230324/Project/Sample/06.html
@@ -90,7 +90,8 @@
           generatedElements.forEach(element => {
             elmContainer.appendChild(element); 
           });
-        }else{
+        }
+        else{
           result = "No A-Frame primitive element found.\n";
         }
         return result;
