--- a/ChatGPT-20230324/Project/Sample/07.html
+++ b/ChatGPT-20230324/Project/Sample/07.html
@@ -99,7 +99,8 @@
           generatedElements.forEach(element => {
             elmContainer.appendChild(element); 
           });
-        }else{
+        }
+        else{
           result = "No A-Frame primitive element found.\n";
         }
         return result;
