--- a/ChatGPT-20230324/Project/Sample/08.html
+++ b/ChatGPT-20230324/Project/Sample/08.html
@@ -17,8 +17,8 @@
         /***Lesson8:編集開始***/
         //ChatGPTに送信するメッセージ。system:システムの役割、user:指示
         messageArray=[
-            {role: "system", content: "あなたA-Frameバージョン1.4.0以降のPrimitive Elementのタグを教えるアシスタントです。"},
-        ];   
+          {role: "system", content: "あなたA-Frameバージョン1.4.0以降のPrimitive Elementのタグを教えるアシスタントです。"}
+        ]; 
         /***Lesson8:編集終了***/
       }
       //ボタンを押した時の挙動
@@ -100,7 +100,8 @@
           generatedElements.forEach(element => {
             elmContainer.appendChild(element); 
           });
-        }else{
+        }
+        else{
           result = "No A-Frame primitive element found.\n";
         }
         return result;
