サンプルをアップデート

--- a/ChatGPT-20230324/Project/Sample/08.html
+++ b/ChatGPT-20230324/Project/Sample/08.html
@@ -36,7 +36,7 @@
           - a-camera,a-assets,a-lightは使用しない。
           - scriptを使用しない。          
           - アニメーションの設定を要求された場合は、<a-animation>ではなくanimationコンポーネントを使用。
-          - 背景の設定にbackgroundコンポーネントではなくa-sky>を使用。
+          - 背景の設定にbackgroundコンポーネントではなく<a-sky>を使用。
           - 結果は1つのコードブロックに記述。"""
           指示： """`+prompt+`"""`;
         /***Lesson8:編集開始***/
